// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qrcode Qrcode base demo works fine 1`] = `
<base>
  <wx-view
    class="t-qrcode-container"
  >
    <t-qrcode
      level="M"
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
    <t-qrcode
      borderless="{{true}}"
      level="M"
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
  </wx-view>
</base>
`;

exports[`Qrcode Qrcode color demo works fine 1`] = `
<color>
  <wx-view
    class="t-qrcode-container"
  >
    <t-qrcode
      bgColor="#fff"
      color="#0052D9"
      level="M"
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
    <t-qrcode
      bgColor="#D9E1FF"
      color="#0052D9"
      level="M"
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
  </wx-view>
</color>
`;

exports[`Qrcode Qrcode download demo works fine 1`] = `
<download>
  <wx-view
    class="t-qrcode-container"
  >
    <t-qrcode
      id="myQrcode"
      value="https://example.com"
    />
    <wx-view
      class="t-qrcode-container__button"
      bind:tap="handleDownload"
    >
      Download 
    </wx-view>
  </wx-view>
</download>
`;

exports[`Qrcode Qrcode icon demo works fine 1`] = `
<wx-icon>
  <t-qrcode
    icon="https://tdesign.gtimg.com/site/tdesign-logo.png"
    level="M"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</wx-icon>
`;

exports[`Qrcode Qrcode level demo works fine 1`] = `
<level>
  <wx-radio-group
    class="horizontal-radio-group"
    bind:change="handleLevelChange"
  >
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked="{{true}}"
        value="L"
      />
      
    L
  
    </wx-label>
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked=""
        value="M"
      />
      
    M
  
    </wx-label>
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked=""
        value="Q"
      />
      
    Q
  
    </wx-label>
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked=""
        value="H"
      />
      
    H
  
    </wx-label>
  </wx-radio-group>
  <t-qrcode
    level="L"
    status="active"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  />
</level>
`;

exports[`Qrcode Qrcode size demo works fine 1`] = `
<size>
  <wx-view
    class="t-qrcode-container"
  >
    <wx-view
      class="controls"
    >
      <wx-view
        class="change-button"
        bind:tap="decreaseSize"
      >
        - Smaller
      </wx-view>
      <wx-view
        class="change-button"
        bind:tap="increaseSize"
      >
        + Larger
      </wx-view>
    </wx-view>
    <t-qrcode
      level="M"
      size="{{160}}"
      status="active"
      value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    />
  </wx-view>
</size>
`;

exports[`Qrcode Qrcode status demo works fine 1`] = `
<status>
  <wx-radio-group
    class="horizontal-radio-group"
    style="margin-bottom: 40rpx"
    bind:change="handleStatusChange"
  >
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked="{{true}}"
        value="expired"
      />
      
    expired
  
    </wx-label>
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked=""
        value="loading"
      />
      
    loading
  
    </wx-label>
    <wx-label
      class="radio-label"
    >
      <wx-radio
        checked=""
        value="scanned"
      />
      
    scanned
  
    </wx-label>
  </wx-radio-group>
  <t-qrcode
    status="expired"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
    bind:refresh="handleRefresh"
  />
</status>
`;

exports[`Qrcode Qrcode status-render demo works fine 1`] = `
<status-render>
  <wx-view
    class="radio-container"
  >
    <wx-radio-group
      class="horizontal-radio-group"
      bind:change="handleStatusChange"
    >
      <wx-label
        class="radio-label"
      >
        <wx-radio
          checked="{{true}}"
          value="expired"
        />
        <wx-text
          class="radio-text"
        >
          expired
        </wx-text>
      </wx-label>
      <wx-label
        class="radio-label"
      >
        <wx-radio
          checked=""
          value="loading"
        />
        <wx-text
          class="radio-text"
        >
          loading
        </wx-text>
      </wx-label>
      <wx-label
        class="radio-label"
      >
        <wx-radio
          checked=""
          value="scanned"
        />
        <wx-text
          class="radio-text"
        >
          scanned
        </wx-text>
      </wx-label>
    </wx-radio-group>
  </wx-view>
  <t-qrcode
    status="expired"
    statusRender="{{true}}"
    value="https://tdesign.gtimg.com/site/tdesign-logo.png"
  >
    <wx-view
      slot="statusRender"
    >
      <wx-view
        class="qrcode-expired"
      >
        <wx-view
          class="qrcode-expired__wrapper"
        >
          <t-icon
            color="#ff0000"
            name="close-circle-filled"
            size="36rpx"
          />
          <wx-text
            class="qrcode-expired__text2"
          >
             二维码过期 
          </wx-text>
        </wx-view>
        <wx-view
          class="qrcode-expired__button"
          bind:tap="handleRefresh"
        >
          <t-icon
            name="refresh"
            size="36rpx"
          />
          <wx-view
            class="qrcode-expired__text2"
          >
            点击刷新
          </wx-view>
        </wx-view>
      </wx-view>
    </wx-view>
  </t-qrcode>
</status-render>
`;
